force-app/main/default/objects/Client_Document__c/Client_Document__c.object-meta.xml
<CustomObject>
    <label>Client Document</label>
    <pluralLabel>Client Documents</pluralLabel>
    <description>Stores identification and legal documents (e.g. passport, ID card, contract) associated with a client Account.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Client Document Name</label>
        <type>AutoNumber</type>
        <displayFormat>CD-{0000}</displayFormat>
        <startingNumber>0</startingNumber>
    </nameField>
    <validationRules>
        <fullName>IssueDateNotInFuture</fullName>
        <active>true</active>
        <description>Prevents entering an Issue Date later than today, since a document cannot be issued in the future.</description>
        <errorConditionFormula>Issue_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Issue_Date__c</errorDisplayField>
        <errorMessage>Issue Date cannot be later than today.</errorMessage>
    </validationRules>
</CustomObject>