force-app/main/default/objects/Client_Document__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <label>Client / Account</label>
    <description>The client Account this document belongs to.</description>
    <inlineHelpText>Select the client this document belongs to.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Documents</relationshipLabel>
    <relationshipName>Client_Documents</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>