force-app/main/default/objects/Client_Document__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Document Number</label>
    <description>The real-world identification number printed on the document (e.g. passport number).</description>
    <inlineHelpText>Enter the exact number printed on the document, e.g. the passport or ID card number.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>