force-app/main/default/objects/Client_Document__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <description>The date on which the document expires, if applicable.</description>
    <type>Date</type>
</CustomField>