force-app/main/default/objects/Client_Document__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>Issue Date</label>
    <description>Date the document was issued.</description>
    <inlineHelpText>Enter the date shown on the document as its issue date.</inlineHelpText>
    <type>Date</type>
</CustomField>