force-app/main/default/objects/Client_Document__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Document Status</label>
    <description>The current status of the document. Defaults to Valid on creation, is set to Expired automatically by the nightly Client Document Auto Expire scheduled flow once past its Expiration Date, or is set manually to Revoked to retire a document without deleting it.</description>
    <inlineHelpText>Valid, Expired, or Revoked.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
                <default>true</default>
                <label>Valid</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>