force-app/main/default/objects/Client_Document__c/validationRules/Expiration_After_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_After_Issue</fullName>
    <active>true</active>
    <description>Ensures the Expiration Date is always after the Issue Date.</description>
    <errorConditionFormula>Expiration_Date__c &lt;= Issue_Date__c</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiration Date must be after Issue Date.</errorMessage>
</ValidationRule>